Your First Web Page

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<p>This is a paragraph tag that is used to <em>display text to a user in <strong>paragraph</strong> form</em></p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <title>My first web page</title>
 
-<div>
-    <div>
-        <div>
-            <div>
-                <a href="/"></a>
-            </div>
-        </div>
-    </div>
-</div>       
+    </head>
+    <body>
+        <h1>My first web page</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim laudantium modi ea, saepe vero beatae aperiam voluptatum soluta praesentium inventore repellat, fuga illo ullam quasi blanditiis, maxime expedita alias deleniti?</p>
+    </body>
+</html>
