Head and body tag

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>My first web page</title>
-
+        <meta name="keywords" content="fish, smelly, trout, salmon, shark">
+        <meta name="description" content="We sell the smelliest fish online, guaranteed!">
+        <title>Mr Green's Smelly Fish Emporium</title>
+        <link rel="stylesheet" type="text/css" href="The_Net_Ninja/main.css">
     </head>
     <body>
         <h1>My first web page</h1>
