--- a/index.html
+++ b/index.html
@@ -10,17 +10,25 @@
     <body>
         <h1>Welcome to my smelly fish shop</h1>
         <p>We sell the smelliest fish on the planet</p>
-        <p>We sell the smelliest <small>fish</small> on the planet</p>
-        <p>We sell the smelliest <mark>fish</mark> on the planet</p>
-        <p>We sell the smelliest <sub>fish</sub> on the planet</p>
-        <p>We sell the smelliest <sup>fish</sup> on the planet 10<sup>4</sup></p>
-        <p><pre>We sell the smelliest 
-            fish on the planet</pre></p>
 
-        <h1>This is a h1 tag</h1>
-        <h2>This is a h2 tag</h2>
-        <h3>This is a h3 tag</h3>
-        <h4>This is a h4 tag</h4>
-        <h5>This is a h5 tag</h5>
+        <h2>Types of Fish We Sell</h2>
+        <h3>Freshwater Fish</h3>
+        <p>We are experts in catching many types of freshwater fish</p>
+        <h3>Saltwater Fish</h3>
+        <p>We are experts in catching many types of saltwater fish</p>
+
+        <h2>About Us</h2>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in rem nemo facere magnam iusto? Eveniet est commodi culpa maiores totam nihil officiis laboriosam sapiente similique tenetur, amet accusamus quaerat!</p>
+
+        <h2>Contact Us</h2>
+        <p>You can contact Us in various ways</p>
+        <h3>By phone</h3>
+        <p>222-222-fish</p>
+        <h3>By Email</h3>
+        <p>iamfish@fish.com</p>
+        <h3>By carrier pidgeon</h3>
+        <p>To do this, order pidgeon at www.pidgeon.com</p>
+
+        
     </body>
 </html>
