--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" href="The_Net_Ninja/main.css">
     </head>
     <body>
+        <img src="img/fish_img.jpg">
         <h1>Welcome to my smelly fish shop</h1>
         <p>We sell the smelliest fish on the planet</p>
 
