--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
         <link rel="stylesheet" type="text/css" href="The_Net_Ninja/main.css">
     </head>
     <body>
-        <img src="img/fish_img.jpg">
+        <div id="top"></div>
+        <img src="img/fish_img.jpg" alt="image of a fish">
         <h1>Welcome to my smelly fish shop</h1>
         <p>We sell the smelliest fish on the planet</p>
+
+        <a href="prices/contact.html">Contact Us</a>
+        <a href="prices/index.html">Price list</a>
+        <a href="https://netninja.dev/" target="_blank">Try out some awesome web tutorials</a>
+        <a href="downloads/prices.pdf">Dowload our full price list</a>
 
         <h2>Types of Fish We Sell</h2>
         <h3>Freshwater Fish</h3>
@@ -30,6 +36,6 @@
         <h3>By carrier pidgeon</h3>
         <p>To do this, order pidgeon at www.pidgeon.com</p>
 
-        
+        <a href="#top">To top</a>
     </body>
 </html>
