--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         <h1>Welcome to my smelly fish shop</h1>
         <p>We sell the smelliest fish on the planet</p>
 
-        <a href="prices/contact.html">Contact Us</a>
-        <a href="prices/index.html">Price list</a>
-        <a href="https://netninja.dev/" target="_blank">Try out some awesome web tutorials</a>
-        <a href="downloads/prices.pdf">Dowload our full price list</a>
-
+        <ul>
+            <li><a href="prices/contact.html">Contact Us</a></li>
+            <li><a href="prices/index.html">Price list</a></li>
+            <li><a href="https://netninja.dev/" target="_blank">Try out some awesome web tutorials</a></li>
+            <li><a href="downloads/prices.pdf">Dowload our full price list</a></li>
+        </ul>
         <h2>Types of Fish We Sell</h2>
         <h3>Freshwater Fish</h3>
         <p>We are experts in catching many types of freshwater fish</p>
