--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
         <title>Mr Green's Smelly Fish Emporium</title>
         <link rel="stylesheet" type="text/css" href="The_Net_Ninja/main.css">
     </head>
+
     <body>
         <div id="top"></div>
         <img src="img/fish_img.jpg" alt="image of a fish">
         <h1>Welcome to my smelly fish shop</h1>
         <p>We sell the smelliest fish on the planet</p>
+
+        <hr>
 
         <ul>
             <li><a href="prices/contact.html">Contact Us</a></li>
@@ -19,6 +22,9 @@
             <li><a href="https://netninja.dev/" target="_blank">Try out some awesome web tutorials</a></li>
             <li><a href="downloads/prices.pdf">Dowload our full price list</a></li>
         </ul>
+        
+        <hr>
+
         <h2>Types of Fish We Sell</h2>
         <h3>Freshwater Fish</h3>
         <p>We are experts in catching many types of freshwater fish</p>
@@ -26,7 +32,7 @@
         <p>We are experts in catching many types of saltwater fish</p>
 
         <h2>About Us</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in rem nemo facere magnam iusto? Eveniet est commodi culpa maiores totam nihil officiis laboriosam sapiente similique tenetur, amet accusamus quaerat!</p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in rem nemo facere magnam iusto? <br>Eveniet est commodi culpa maiores totam nihil officiis laboriosam sapiente similique tenetur, amet accusamus quaerat!</p>
 
         <h2>Contact Us</h2>
         <p>You can contact Us in various ways</p>
@@ -38,5 +44,7 @@
         <p>To do this, order pidgeon at www.pidgeon.com</p>
 
         <a href="#top">To top</a>
+
     </body>
+
 </html>
