--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <meta charset="UTF-8">
         <meta name="keywords" content="fish, smelly, trout, salmon, shark">
@@ -9,39 +10,51 @@
     </head>
 
     <body>
-        <div id="top"></div>
-        <img src="img/fish_img.jpg" alt="image of a fish">
-        <h1>Welcome to my smelly fish shop</h1>
-        <p>We sell the smelliest fish on the planet</p>
-
-        <hr>
-
-        <ul>
-            <li><a href="prices/contact.html">Contact Us</a></li>
-            <li><a href="prices/index.html">Price list</a></li>
-            <li><a href="https://netninja.dev/" target="_blank">Try out some awesome web tutorials</a></li>
-            <li><a href="downloads/prices.pdf">Dowload our full price list</a></li>
-        </ul>
         
+        <div id="top"></div>
+
+        <div>
+            <img src="img/fish_img.jpg" alt="image of a fish">
+            <h1>Welcome to my smelly fish shop</h1>
+            <p>We sell the smelliest fish on the planet</p>
+        </div>
+
         <hr>
 
-        <h2>Types of Fish We Sell</h2>
-        <h3>Freshwater Fish</h3>
-        <p>We are experts in catching many types of freshwater fish</p>
-        <h3>Saltwater Fish</h3>
-        <p>We are experts in catching many types of saltwater fish</p>
+        <div>
+            <ul>
+                <li><a href="prices/contact.html">Contact Us</a></li>
+                <li><a href="prices/index.html">Price list</a></li>
+                <li><a href="https://netninja.dev/" target="_blank">Try out some awesome web tutorials</a></li>
+                <li><a href="downloads/prices.pdf">Dowload our full price list</a></li>
+            </ul>
+        </div>
 
-        <h2>About Us</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in rem nemo facere magnam iusto? <br>Eveniet est commodi culpa maiores totam nihil officiis laboriosam sapiente similique tenetur, amet accusamus quaerat!</p>
+        <hr>
 
-        <h2>Contact Us</h2>
-        <p>You can contact Us in various ways</p>
-        <h3>By phone</h3>
-        <p>222-222-fish</p>
-        <h3>By Email</h3>
-        <p>iamfish@fish.com</p>
-        <h3>By carrier pidgeon</h3>
-        <p>To do this, order pidgeon at www.pidgeon.com</p>
+        <div>
+            <h2>Types of Fish We Sell</h2>
+            <h3>Freshwater Fish</h3>
+            <p>We are experts in catching many types of freshwater fish</p>
+            <h3>Saltwater Fish</h3>
+            <p>We are experts in catching many types of saltwater fish</p>
+        </div>
+
+        <div>
+            <h2>About Us</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in rem nemo facere magnam iusto? <br>Eveniet est commodi culpa maiores totam nihil officiis laboriosam sapiente similique tenetur, amet accusamus quaerat!</p>
+        </div>
+
+        <div>
+            <h2>Contact Us</h2>
+            <p>You can contact Us in various ways</p>
+            <h3>By phone</h3>
+            <p>222-222-fish</p>
+            <h3>By Email</h3>
+            <p>iamfish@fish.com</p>
+            <h3>By carrier pidgeon</h3>
+            <p>To do this, order pidgeon at www.pidgeon.com</p>
+        </div>
 
         <a href="#top">To top</a>
 
