--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     </head>
 
     <body>
-        
+
         <div id="top"></div>
 
-        <div>
+        <div id="header">
             <img src="img/fish_img.jpg" alt="image of a fish">
             <h1>Welcome to my smelly fish shop</h1>
             <p>We sell the smelliest fish on the planet</p>
@@ -21,7 +21,7 @@
 
         <hr>
 
-        <div>
+        <div id="navigation">
             <ul>
                 <li><a href="prices/contact.html">Contact Us</a></li>
                 <li><a href="prices/index.html">Price list</a></li>
@@ -32,7 +32,7 @@
 
         <hr>
 
-        <div>
+        <div id="types_of_fish">
             <h2>Types of Fish We Sell</h2>
             <h3>Freshwater Fish</h3>
             <p>We are experts in catching many types of freshwater fish</p>
@@ -40,20 +40,26 @@
             <p>We are experts in catching many types of saltwater fish</p>
         </div>
 
-        <div>
+        <div id="about_us">
             <h2>About Us</h2>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sit in rem nemo facere magnam iusto? <br>Eveniet est commodi culpa maiores totam nihil officiis laboriosam sapiente similique tenetur, amet accusamus quaerat!</p>
         </div>
 
-        <div>
+        <div id="contact_us">
             <h2>Contact Us</h2>
             <p>You can contact Us in various ways</p>
-            <h3>By phone</h3>
-            <p>222-222-fish</p>
-            <h3>By Email</h3>
-            <p>iamfish@fish.com</p>
-            <h3>By carrier pidgeon</h3>
-            <p>To do this, order pidgeon at www.pidgeon.com</p>
+            <div class="contact_method">
+                <h3>By phone</h3>
+                <p>222-222-fish</p>
+            </div>
+            <div class="contact_method">
+                <h3>By Email</h3>
+                <p>iamfish@fish.com</p>
+            </div>
+            <div class="contact_method">
+                <h3>By carrier pidgeon</h3>
+                <p>To do this, order pidgeon at www.pidgeon.com</p>
+            </div>
         </div>
 
         <a href="#top">To top</a>
