--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
 
     <head>
+
         <meta charset="UTF-8">
         <meta name="keywords" content="fish, smelly, trout, salmon, shark">
         <meta name="description" content="We sell the smelliest fish online, guaranteed!">
         <title>Mr Green's Smelly Fish Emporium</title>
-        <link rel="stylesheet" type="text/css" href="The_Net_Ninja/main.css">
+        <link rel="stylesheet" href="css/main.css">
+
     </head>
 
     <body>
