--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
         <div id="navigation">
             <ul>
-                <li><a href="prices/contact.html">Contact Us</a></li>
+                <li><a onclick="alert('Hello everyone, welcome to my page!!!')" href="prices/contact.html">Contact Us</a></li>
                 <li><a href="prices/index.html">Price list</a></li>
                 <li><a href="https://netninja.dev/" target="_blank">Try out some awesome web tutorials</a></li>
                 <li><a href="downloads/prices.pdf">Dowload our full price list</a></li>
@@ -65,6 +65,8 @@
         </div>
 
         <a href="#top">To top</a>
+
+        <script src="scripts/main.js"></script>
 
     </body>
 
